# cplusplus-sdk

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Draft Conversion Analysis  DuplicatedNames.md  GenerateProjects.bat  GlazeUpgradePlan.md  JSON_ParserComparison.md  LICENSE  LICENSE.md  MCPMethodMap.md  README  README.md  README_v2.md  SchemaDeltas.md  THIRD_PARTY_LICENSES.md  THIRD_PARTY_LICENSES.txt  TaskList.md  Tasks.md  premake5.lua  test_json  vcpkg.json
Reference/: CMakeLists.txt
Reference/OBE-Private/Server/Core/: Server.cpp
Reference/OBE-Private/Utilities/URI/: URI_Template.cpp
Reference/OBE-Public/Auth/Handlers/: Authorize.hpp  Metadata.hpp
Reference/OBE-Public/Auth/Middleware/: AllowedMethods.hpp  BearerAuth.hpp
Reference/OBE-Public/Auth/Providers/: ProxyProvider.hpp
Reference/OBE-Public/Auth/Server/: Clients.hpp  Router.hpp
Reference/OBE-Public/Client/Core/: Client.hpp
Reference/OBE-Public/Communication/Serialization/: JSON_FWD.hpp  LICENSE.md
Reference/OBE-Public/Communication/Transport/: Stdio.hpp  Transport.hpp
Reference/OBE-Public/Core/Includes/: Macros.h
Reference/OBE-Public/Core/Protocols/: Protocol.hpp
Reference/OBE-Public/Core/Types/: Error.hpp  Notification.hpp  Result.hpp
Reference/OBE-Public/Utilities/Autocomplete/: Completable.hpp
Reference/OBE-Public/Utilities/Conversion/: ConversionUtilities.hpp
Reference/OBE-Public/Utilities/JSON/: ZodToJSON.md
Reference/OBE-Public/Utilities/URI/: URI_Template.h
SDK/Testing/: CMakeLists.txt  TestMain.cpp
Source/: CMakeLists.txt
Source/Base/Core/: Server.h  Session.h  Transport.h
Source/Private/: CMakeLists.txt  MCP_Error.cpp  Session.cpp
Source/Private/API/: SimpleMCPAPI.cpp
Source/Private/Auth/Client/: AuthClient.cpp
Source/Private/Auth/Handlers/: Authorize.cpp  Metadata.cpp  Register.cpp  Revoke.cpp  Router.cpp  Token.cpp
Source/Private/Auth/Middleware/: AllowedMethods.cpp  BearerAuth.cpp  ClientAuth_MW.cpp
Source/Private/Auth/Providers/: Provider.cpp  ProxyProvider.cpp
Source/Private/Client/Core/: Client.cpp
Source/Private/Communication/: Messages.cpp
Source/Private/Communication/HTTP/: HTTP.cpp
Source/Private/Communication/LegacyTransport/: SSE.cpp
Source/Private/Communication/Transport/: ITransport.cpp  InMemoryTransport.cpp  MCP_HTTP_Transport.cpp  MCP_StdioTransport.cpp  StdioServerTransport.cpp  StdioTransport.cpp  StreamableHTTPBase.cpp  StreamableHTTPTransport.cpp
Source/Private/Communication/Transport__DT/: InMemory.cpp  InMemory.hpp  SSE.cpp  StreamableHTTP.cpp  Websocket.cpp
Source/Private/Communication/Utilities/: HTTPClient.cpp  TransportUtilities.cpp
Source/Private/Core/: Session.cpp
Source/Private/Core/Messages/: ErrorBase.cpp  MessageBase.cpp  NotificationBase.cpp  RequestBase.cpp  ResponseBase.cpp
Source/Private/CoreSDK/Common/: MCPContext.cpp  Progress.cpp  RuntimeError.cpp
Source/Private/CoreSDK/Core/: IMCP.cpp  MCPClient.cpp  MCPServer.cpp
Source/Private/CoreSDK/Features/: PromptManager.cpp  ResourceManager.cpp  RootManager.cpp  SamplingManager.cpp  ToolManager.cpp
Source/Private/CoreSDK/Messages/: ErrorManager.cpp  NotificationManager.cpp  RequestManager.cpp  ResponseManager.cpp
Source/Private/CoreSDK/Transport/: HTTPTransport.cpp  ITransport.cpp  StdioTransport.cpp
Source/Private/Server/Core/: Server.cpp
Source/Private/Utilities/Autocomplete/: Completable.cpp
Source/Private/Utilities/CLI/: CLI.cpp
Source/Private/Utilities/HTTP/: HTTPProxy.cpp
Source/Private/Utilities/URI/: URI_Template.cpp
Source/Public/: CMakeLists.txt  Content.h  Initialize.h  MCP_Content.h  MCP_Error.h  MCP_Initialize.h  MCP_Message.h  MCP_Notification.h  MCP_Prompt.h  MCP_Request.h  MCP_Resource.h  MCP_Response.h  MCP_Root.h  MCP_Tool.h  MCP_Utilities.h  Message.h  Notification.h  Prompt.h  Request.h  Resource.h  Response.h  Root.h  Session.h  Tool.h
Source/Public/API/: SimpleMCPAPI.cpp  SimpleMCPAPI.h
Source/Public/Auth/: Auth.hpp  clientAuth.test.ts
Source/Public/Auth/Auth_Server/: AuthErrors.hpp  Clients.hpp  Router.hpp
Source/Public/Auth/Client/: AuthClient.h  AuthClient.hpp  Auth_Client.hpp
Source/Public/Auth/Handlers/: Authorize.h  Authorize.hpp  Metadata.h  Metadata.hpp  Register.h  Register.hpp  Revoke.h  Revoke.hpp  Router.h  Token.h  Token.hpp
Source/Public/Auth/Middleware/: AllowedMethods.h  AllowedMethods.hpp  BearerAuth.h  (+3 more)
Source/Public/Client/: ClientSchemas.h  MCPClient.h
Source/Public/Communication/: Message.h  Messages.h  TransportsPlan.md
Source/Public/Core/: Protocol__DT.hpp  Session.h  URI_Template.hpp
Source/Public/CoreSDK/: Auth.cpp  Auth.h  BatchProcessor.h  ComprehensiveLogging.h  ErrorCodes.h  ErrorRecovery.cpp  ErrorRecovery.h  ExampleUsage.cpp  HTTPTransport.cpp  HTTPTransport.h  ITransport.cpp  ITransport.h  JSONSchemaValidator.cpp  JSONSchemaValidator.h  MCPMessages.h  MCPProtocol.cpp  MCPProtocol.h  MCPSDK.cpp  MCPSDK.h  MCPTask.h  MCPTypes.h  MCP_Specification_Compliance_Review.md  PerformanceOptimizations.h  SimpleMCPAPI.cpp  SimpleMCPAPI.h  StdioTransport.cpp  StdioTransport.h  TestJSON.cpp
Source/Public/Proxies/: HTTPLayer.hpp  HTTPProxy.h  JSONProxy.h  URIProxy.h  URITemplate.h  UUIDProxy.h
Source/Public/Sandbox/: AdvancedServer.h  ClientBase.h  IMCP.h  IProtocol.h  ISession.h  ITransport.h  MCPClient.h  MCPServer.h  Protocol.h  ServerBase.h  Session.h  SimpleServer.h  TransportPseudoCode.h
Source/Public/Server/: MCPServer.h  ServerSchemas.h
Source/Public/Transport/: InMemory.hpp  SSE.hpp  StreamableHTTP.hpp  Websocket.hpp  serverSse.test.ts
Source/Public/Utilities/: Completable.hpp  completable.test.ts
Testing/: CMakeLists.txt  T_StdioServer.cpp  TestHelpers.h  TestJSON.cpp  TestMain.cpp  TestTransportHTTP.cpp  TestTransportSTDIO.cpp
Testing/Communication/Transport/: clientStreamableHttp.test.ts  serverStdio.test.ts  serverStreamableHttp.test.ts
Testing/Core/Types/: constants.test.ts
Testing/Server/Core/: serverMcp.test.ts
Testing/Utilities/JSON/: JSON_RPC_Utilities.test.ts
Testing/Utilities/URI/: URI_Template.test.ts
(+444 files in other folders)
